# SAUND

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SAUND.jucer
JUCE/tools/: .ninja_log  CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  build.ninja  cmake_install.cmake
JUCE/tools/modules/: cmake_install.cmake
Source/: CurveComponent.cpp  CurveComponent.h  Ebu128LoudnessMeter.cpp  Ebu128LoudnessMeter.h  MainComponent.cpp  MainComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SAUNDLookAndFeel.cpp  SAUNDLookAndFeel.h  SecondOrderIIRFilter.h  SimpleIIRFilter.cpp  SimpleIIRFilter.h  WaveformComponent.cpp  WaveformComponent.h
